--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -25,6 +25,10 @@ gunicorn = "^23.0.0"
 asyncpg = "0.30.0"
 pydantic-settings = "^2.10.1"
 pytest-xdist = "^3.8.0"
+pandas = "^2.3.2"
+shapely = "^2.1.2"
+geopandas = "^1.1.1"
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.2"
