--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
 
-error_log  /var/log/nginx/error.log warn;
+error_log /var/log/nginx/error.log warn;
 
 events {
     worker_connections 1024;
@@ -14,16 +14,22 @@ http {
     default_type application/octet-stream;
 
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
 
     sendfile on;
-    
+
     gzip on;
     gzip_comp_level 6;
     gzip_types text/plain text/css image/svg+xml application/json application/javascript;
+
+
+    client_max_body_size 100M;
+    proxy_read_timeout 300s;
+    proxy_connect_timeout 300s;
+    proxy_send_timeout 300s;
 
     include /etc/nginx/conf.d/*.conf;
 }
